# OlivaDiceJoy.nb2

./: .gitignore  README.md  pyproject.toml
OlivaDiceJoy/: __init__.py  main.py  msgCustom.py  msgCustomManager.py  msgReply.py
