[tool.poetry]
name = "OlivaDiceJoy.nb2"
version = "0.1.0"
description = "Run OlivaDiceJoy in NoneBot2"
authors = [
    "lunzhipenxil <lunzhipenxil@gmail.com>",
    "Jigsaw <j1g5aw@foxmail.com>",
]
license = "AGPL-3.0"
packages = [{ include = "OlivaDiceJoy" }]

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-alpha.16"
nonebot-adapter-cqhttp = "^2.0.0-alpha.16"

[tool.poetry.dev-dependencies]
nb-cli = "^0.5.1"
black = "^21.12b0"
isort = "^5.10.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
